--- a/ui/ui_index.ui
+++ b/ui/ui_index.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MarkDown标题生成器</string>
+   <string>常用工具集</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
